--- a/contact.html
+++ b/contact.html
@@ -3,25 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- Remember to link to your CSS file! -->
+    <title>Contact</title>
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 <body>
-    <!-- CONTACT PAGE -->
-    <!-- TODO: Navbar here -->
-    <!-- TODO: Banner Image here-->
+    <<nav id="navbar">
+        <div id="logo">
+            <img src="assets/images/banner.png" alt="restaurant logo" style="width:400px;height:300px;">
+        </div>
+        <ul>
+            <li class="item"><a href="index.html">Home</a></li>
+            <li class="item"><a href="menu.html">Menu</a></li>
+            <li class="item"><a href="hours.html">Hours</a></li>
+            <li class="item"><a href="about.html">About us</a></li>
+            <li class="item"><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
     <main>
-        <h2>Hours of Operation</h2>
-        <p>
-            <strong>Monday-Friday:</strong> 11:00am-8:30pm
-        </p>
-        <p>
-            <strong>Saturday-Sunday:</strong> 1:00pm-10:00pm
-        </p>
         <h2>Contact Info</h2>
         <p>
-            <strong>Phone Number:</strong> TBD
+            <strong>Phone Number:(555) 555-5555</strong> 
+        <p>
+            <strong>DO NOT CALL. Thank you. Your order, your problem.</strong>
         </p>
+        <h2>Contact Form</h2>
+            <div>
+                <label>First Name</label>
+                <input type="text" name="firstname" id="firstname">
+            </div>
+            <div>
+                <label>Last Name</label>
+                <input type="text" name="lastname" id="lastname">
+            </div>
+            <div>
+                <h3>Suggestions:</h3>
+                <textarea></textarea>
+            </div>
     </main>
 </body>
 </html>
