--- a/hours.html
+++ b/hours.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>H-Thai-ML</title>
+    <title>Hours</title>
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 <body>
-    <nav id="nav">
-        <div id="logo">
-            <img id="banner img" src="assets/images/banner.png" alt="banner img">
-        </div>
+    <div id="logo">
+        <img src="assets/images/table-in-restaurant.jpg" alt="table-in-restaurant" style="width:1250px;height:310px;">
+    </div>    
+    <nav id="navbar">
         <ul>
             <li class="item"><a href="index.html">Home</a></li>
             <li class="item"><a href="menu.html">Menu</a></li>
@@ -19,14 +19,17 @@
             <li class="item"><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <section id="home">
-        <h1 class="h-primary">Place your online order now.</h1>
-        <button class="btn">Order Now</button>
-    </section>
     <main>
-        <h2>H-Thai-ML</h2>
-        <h3>You'll love it, especially since we're the only place in town where you can get thai food. Enjoy. </h3>
+        <h2>Hours of Operation</h2>
+        <p>
+            <strong>Monday-Friday:</strong> 11:00am-8:30pm
+        </p>
+        <p>
+            <strong>Saturday-Sunday:</strong> 1:00pm-10:00pm
+        </p>
+        <p>
+            <strong>CLOSED ALL MAJOR HOLIDAYS</strong>
+        </p>
     </main>
 </body>
 </html>
-
