--- a/about.html
+++ b/about.html
@@ -3,15 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- Remember to link to your CSS file! -->
+    <title>About</title>
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 <body>
-    <!-- ABOUT PAGE -->
-    <!-- TODO: Navbar here -->
-    <!-- TODO: Banner Image here-->
-    <main>
-        <!-- About page code here -->
-    </main>
+    <div id="ingredients">
+        <img src="assets/images/about.jpg" alt="ingredients-seeds" style="width:1000px;height:450px;">
+    </div>    
+<nav id="navbar">
+    <ul>
+        <li class="item"><a href="index.html">Home</a></li>
+        <li class="item"><a href="menu.html">Menu</a></li>
+        <li class="item"><a href="hours.html">Hours</a></li>
+        <li class="item"><a href="about.html">About us</a></li>
+        <li class="item"><a href="contact.html">Contact</a></li>
+    </ul>
+</nav>
+<main>
+    <div class="about-section">
+        <h1>About Us Page</h1>
+        <p>Rustic home-cooked meals with a taste of home. Fresh farm-to-table ingredients. We serve only organic non-GMO produce.</p>
+      </div>
+</main>
 </body>
 </html>
